<resources>
    <string name="app_name">VEX</string>
    <string name="passwordField">password</string>
    <string name="loginField">login</string>
    <string name="loginButton">Войти</string>
    <string name="regButton">Зарегистрироваться</string>
    <string name="forgotPassButton">Забыли пароль? Идите, пока-что, нах*й.</string>
    <string name="loginFieldIsEmpty">Заполните поле логина.</string>
    <string name="passFieldIsEmpty">Введите пароль.</string>
    <string name="settingsText">Настройки</string>
    <string name="settingsText1">Информация профиля:</string>
    <string name="settingsText2">Данные для входа:</string>
    <string name="photoText">Аватар профиля</string>
    <string name="friendsRequest">Входящие запросы в друзья: </string>
    <string name="acceptFriendRequest">Принять</string>
    <string name="noAcceptFriendRequest">Отклонить</string>
    <string name="sendRequest">Отправить</string>
    <string name="loadChats">Идет загрузка диалогов...</string>
    <string name="newMsg">Новое сообщение</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit_from_profile">Выйти из аккаунта</string>
    <string name="select_image_setup_method">Способ установки иконки</string>
    <string name="no_friends">Похоже что у вас пока-что нет друзей в нашем приложении =(</string>
    <string name="friends_label">Ваши друзья: </string>
</resources>
