<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity_and_fargments.FriendsFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:cardBackgroundColor="@color/design_default_color_background"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/search_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/smallMargin"
                android:fontFamily="monospace"
                android:hint="Поиск друзей"
                android:textColor="@color/backgroundColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/smallPadding"
                android:paddingTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_textEdit"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:background="@drawable/text_view_border"
                    android:drawableLeft="@drawable/search_blue"
                    android:fontFamily="monospace"
                    android:hint="@string/loginField"
                    android:paddingEnd="@dimen/margin"
                    android:singleLine="true"
                    android:textColor="@color/bc_lightBlue"
                    android:textCursorDrawable="@drawable/cursor1"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/search_friends"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_gravity="right"
                    android:layout_marginLeft="@dimen/smallMargin"
                    android:layout_weight="0.1"
                    android:background="@drawable/small_radius_round_element_blue"
                    android:fontFamily="monospace"
                    android:singleLine="true"
                    android:text="@string/sendRequest"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/friends_req_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/smallMargin"
        android:visibility="visible"
        app:cardBackgroundColor="@color/design_default_color_background"
        app:cardCornerRadius="@dimen/smallRadius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="@dimen/smallPadding"
                android:text="@string/friendsRequest"
                android:textColor="@color/bc_lightBlue" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/friends_requests_res_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/smallMargin"
        app:cardBackgroundColor="@color/design_default_color_background"
        app:cardCornerRadius="@dimen/smallRadius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="@dimen/smallPadding"
                android:text="@string/friends_label"
                android:textColor="@color/bc_lightBlue" />

            <TextView
                android:id="@+id/no_friends_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="@dimen/smallPadding"
                android:text="@string/no_friends"
                android:textColor="@color/friendLoginColor" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/my_friends_res_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:visibility="visible">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>