<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity_and_fargments.FriendsFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/smallMargin"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/bc_lightBlue"
                android:textSize="18sp"
                tools:text="@string/friendsRequest" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/friendsRequset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/smallMargin"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/smallPadding">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="left"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/bc_lightBlue"
                android:textSize="18sp"
                tools:text="имя дурака" />

            <Button
                android:id="@+id/acceptRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="0.15"
                android:background="@drawable/small_radius_round_element_blue"
                android:text="Button"
                android:textColor="@color/colorPrimaryDark"
                tools:text="@string/acceptFriendRequest" />

            <Button
                android:id="@+id/noAcceptRequest"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:background="@drawable/small_radius_rounded_element_orange"
                android:text="Button"
                android:textColor="@color/colorPrimaryDark"
                tools:text="@string/noAcceptFriendRequest" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>