<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03436A"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="248dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_element"
        android:fontFamily="monospace"
        android:text="@string/loginButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="305dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_view_border"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/passwordField"

        android:inputType="textPassword"
        android:paddingLeft="17dp"

        android:paddingEnd="17dp"
        android:paddingBottom="2pt"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"

        android:textColorHint="@color/bc_lightBlue"
        android:textCursorDrawable="@drawable/cursor"

        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginField"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/loginField"
        android:layout_width="305dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_view_border"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/loginField"
        android:paddingLeft="17dp"
        android:paddingEnd="17dp"
        android:paddingBottom="2pt"
        android:singleLine="true"
        android:textAlignment="viewStart"

        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/bc_lightBlue"

        android:textCursorDrawable="@drawable/cursor"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/passwordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        app:layout_constraintVertical_chainStyle="packed"
        android:id="@+id/textView"
        android:layout_width="202dp"
        android:layout_height="57dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Телега#"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/loginField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>